--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -9,15 +9,18 @@
 
     <link rel="stylesheet" type="text/css" href="appframework/af.ui.css" />
     <link rel="stylesheet" type="text/css" href="appframework/icons.css" />
-
-
+    <link rel="stylesheet" href="css/jquery.mobile.structure-1.0.1.css" />
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+    <link rel="stylesheet" href="css/customres.css" />
+      <link rel="stylesheet" type="text/css" href="css/custom.css" />
 
     <script src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="appframework/jq.appframework.js"></script>
     <script type="text/javascript" charset="utf-8" src="appframework/appframework.ui.min.js"></script>
+    
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script type='application/javascript' src='js/fastclick.js'></script>
-    <!--    <script type="text/javascript" src="js/CustomFunctions.js"></script>-->
+    
     <script type="text/javascript" src="js/jquery.signalR-2.1.2.js"></script>
 
     <script type="text/javascript" src="http://bathindavarinder-001-site1.smarterasp.net/signalr/hubs"></script>
@@ -27,7 +30,7 @@
 
     <script src="xhr.js"></script>
     <script data-main="Indexapp" src="js/require.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/custom.css" />
+  
 
 </head>
 <body style="display: none">
@@ -114,6 +117,39 @@
             <div class="panel" title="Start" id="main" data-load="startApp">
                 Fetching rooms......
             </div>
+
+            <div class="panel" title="Restaurant Picker" id="ResturantPicker" data-footer="none">
+                <div id="choisir_ville" data-role="page" data-add-back-btn="true">
+
+<!--                    <div data-role="header">
+
+                        <h1>Restaurant Picker</h1>
+                    </div>-->
+
+                    <div data-role="content">
+
+                        <div class="choice_list">
+                            <h1>Town? </h1>
+
+                            <ul id="townList" data-role="listview" data-inset="true" data-filter="true">
+                                <li><a href="#" data-transition="slidedown" id="Punjab">Punjab <span class="ui-li-count">3 </span></a></li>
+                                <li><a href="#" data-transition="slidedown" id="Haryana">Haryana <span class="ui-li-count">2 </span></a></li>
+                                <li><a href="#" data-transition="slidedown" id="Rajshtan">Rajshtan <span class="ui-li-count">5 </span></a></li>
+                                <li><a href="#" data-transition="slidedown" id="Pune">Pune <span class="ui-li-count">1</span></a> </li>
+                                <li><a href="#" data-transition="slidedown" id="Mumbai">Mumbai <span class="ui-li-count">2</span></a> </li>
+                                <li><a href="#" data-transition="slidedown" id="Delhi">Delhi<span class="ui-li-count"> 2</span></a> </li>
+                                <li><a href="#" data-transition="slidedown" id="MP">MP <span class="ui-li-count">10 </span></a></li>
+
+                            </ul>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
 
         </div>
 
